--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-0" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-0" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -142,7 +142,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 70%;">
-                  <div class="mbr-figure"><a href="chamber 1"><img src="assets/images/3-1400x934.jpg"></a></div>
+                  <div class="mbr-figure"><img src="assets/images/3-1400x934.jpg"></div>
               </div>
 
             </div>
