--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-0" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-0" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -169,7 +169,7 @@
                   
                   <div class="lead">
 
-                    <p><br><br><br><br><br><br><br><br><br><br><span style="line-height: 1.5;">1. Funerary gift</span><br></p>
+                    <p><span style="line-height: 1.5;"><br></span><br><span style="line-height: 1.5;"><br></span><br><span style="line-height: 1.5;"><br></span><br><span style="line-height: 1.5;"><br></span><br><span style="line-height: 1.5;">1. Funerary gift</span><br></p>
 
                   </div>
 
